# quickflorence

./: .gitignore  README.md  __init__.py  florence_client.py  pyproject.toml  requirements.txt  run.py  server.py
quickflorence/: florence_client.py  server.py
