[project]
name = "quickflorence"
version = "0.1.0"
description = "Florence-2 large vision model MCP server for image understanding"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "torch>=2.0.0",
    "transformers==4.53.0",
    "Pillow>=10.0.0",
    "accelerate",
    "timm",
    "einops",
]

[project.scripts]
quickflorence = "quickflorence.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quickflorence"]
